# agentic-data

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  release.yml  runtime-hardening-guardrails.yml
benches/: benchmarks.rs
crates/agentic-data/: Cargo.toml
crates/agentic-data-cli/: Cargo.toml
crates/agentic-data-cli/src/: main.rs
crates/agentic-data-ffi/: Cargo.toml
crates/agentic-data-ffi/src/: lib.rs
crates/agentic-data-mcp/: Cargo.toml
crates/agentic-data-mcp/src/: main.rs  types.rs
crates/agentic-data-mcp/src/tools/: anomaly.rs  bridge.rs  collective.rs  cross.rs  dna.rs  document.rs  dream.rs  evolve.rs  federate.rs  format.rs  geo.rs  media.rs  metabolism.rs  mod.rs  predict.rs  quality.rs  query.rs  redact.rs  registry.rs  schema.rs  soul.rs  synthetic.rs  temporal.rs  transform.rs  vault.rs  version.rs
crates/agentic-data/src/: lib.rs
crates/agentic-data/src/crypto/: field_encrypt.rs  key_mgmt.rs  mod.rs  redaction.rs
crates/agentic-data/src/engine/: consolidation.rs  graph.rs  ingest.rs  mod.rs  quality.rs  query.rs  session.rs  store.rs  transform.rs
crates/agentic-data/src/format/: mod.rs  reader.rs  writer.rs
crates/agentic-data/src/index/: lineage_index.rs  mod.rs  quality_index.rs  schema_index.rs  spatial_index.rs  temporal_index.rs
crates/agentic-data/src/parser/: calendar_parser.rs  csv_parser.rs  detect.rs  email_parser.rs  geo_parser.rs  html_parser.rs  json_parser.rs  log_parser.rs  media_parser.rs  mod.rs  sql_parser.rs  xml_parser.rs  yaml_parser.rs
crates/agentic-data/src/types/: error.rs  header.rs  lineage.rs  mod.rs  quality.rs  record.rs  schema.rs  source.rs  spatial.rs
crates/agentic-data/tests/: edge_cases.rs  engine_deep.rs  integration.rs  paper_validation.rs  stress.rs
docs/public/: SCENARIOS-AGENTIC-DATA.md  api-reference.md  architecture.md  benchmarks.md  cli-reference.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  guide.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  playbooks-agent-integration.md  quickstart.md  sister.manifest.json  troubleshooting.md
paper/paper-i-data-comprehension/: agenticdata-paper.tex  references.bib
planning-docs/: AGENTICDATA-COMPLETE-SPEC.md
scripts/: check-canonical-sister.sh  check-install-commands.sh  install.sh  publish-crates.sh
