[package]
name = "agentic-data-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AgenticData CLI — command-line interface for data comprehension"

[[bin]]
name = "adat"
path = "src/main.rs"

[dependencies]
agentic-data = { path = "../agentic-data" }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
