[package]
name = "agentic-data-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AgenticData FFI — C bindings for cross-language integration"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
agentic-data = { path = "../agentic-data" }
blake3 = { workspace = true }
serde_json = { workspace = true }
