[package]
name = "agentic-data-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AgenticData MCP server — 131 tools for universal data comprehension"

[[bin]]
name = "agentic-data-mcp"
path = "src/main.rs"

[dependencies]
agentic-data = { path = "../agentic-data" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
