[package]
name = "agentic-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal data comprehension engine — understands structure, infers meaning, tracks lineage"
readme = "../../README.md"
keywords = ["data", "schema", "lineage", "quality", "mcp"]
categories = ["data-structures", "parser-implementations", "encoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
lz4_flex = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
